--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Paper Kit 2 Angular | Free Bootstrap 4 UI Kit by Creative Tim</title>
-    <base href="/">
+    <base href="/Angular-App">
 
     <link rel="icon" type="image/png" href="assets/img/favicon.ico">
     <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
