--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Paper Kit 2 Angular | Free Bootstrap 4 UI Kit by Creative Tim</title>
-    <base href="/Angular-App">
+    <title>Portfolio</title>
+    <base href="/">
 
     <link rel="icon" type="image/png" href="assets/img/favicon.ico">
     <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
